# backend

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
.github/: dependabot.yml
.github/worflows/: user-service.yml
.github/workflows/: gateway-service.yml  product-service.yml  session-service.yml  session_service.yml  store-product-service.yml  store-service.yml  user-service.yml
.ijwb/: .bazelproject
bazel_tools/: dependencies.bzl
proto/: BUILD.bazel  location.proto  pagination.proto  product.proto  product_service.proto  session_service.proto  store.proto  store_product.proto  store_product_service.proto  store_service.proto  user.proto  user_service.proto
src/go/common/: BUILD.bazel  types.go
src/go/common/env/: BUILD.bazel  env.go
src/go/common/log/: BUILD.bazel  log.go
src/go/common/pb/: BUILD.bazel  location.pb.go  pagination.pb.go  product.pb.go  product_service.pb.go  session_service.pb.go  store.pb.go  store_product.pb.go  store_product_service.pb.go  store_service.pb.go  user.pb.go  user_service.pb.go
src/go/common/types/: BUILD.bazel  product.go  store.go  store_product.go  types.go  user.go
src/go/gateway-service/: BUILD.bazel  Chart.yaml  main.go
src/go/gateway-service/config/: BUILD.bazel  config.go
src/go/gateway-service/delivery/: BUILD.bazel  gql.go  gql_location.go  gql_store.go  gql_user.go  http.go
src/go/gateway-service/service/: BUILD.bazel  service.go
src/go/gateway-service/templates/: config.yaml  deployment.yaml  ingress.yaml  service.yaml
src/go/product-service/: BUILD.bazel  Chart.yaml
src/go/product-service/config/: BUILD.bazel  config.go
src/go/product-service/delivery/: BUILD.bazel  grpc.go
src/go/product-service/product/: BUILD.bazel  product.go
src/go/product-service/repository/: BUILD.bazel  postgres.go
src/go/product-service/service/: BUILD.bazel  service.go
src/go/product-service/templates/: config.yaml  deployment.yaml  service.yaml
src/go/product-service/usecase/: BUILD.bazel  usecase.go
src/go/session-service/: BUILD.bazel  Chart.yaml  main.go
src/go/session-service/config/: BUILD.bazel  config.go
src/go/session-service/delivery/: BUILD.bazel  grpc.go
src/go/session-service/repository/: BUILD.bazel  redis.go
src/go/session-service/service/: BUILD.bazel  service.go
src/go/session-service/session/: BUILD.bazel  session.go
src/go/session-service/templates/: config.yaml  deployment.yaml  service.yaml
src/go/store-product-service/: BUILD.bazel  Chart.yaml  main.go
src/go/store-product-service/config/: BUILD.bazel  config.go
src/go/store-product-service/delivery/: BUILD.bazel  grpc.go
src/go/store-product-service/repository/: BUILD.bazel  postgres.go
src/go/store-product-service/service/: BUILD.bazel  service.go
src/go/store-product-service/store_product/: BUILD.bazel  store_product.go
src/go/store-product-service/templates/: config.yaml  deployment.yaml  service.yaml
src/go/store-product-service/usecase/: BUILD.bazel  usecase.go
src/go/store-service/: BUILD.bazel  Chart.yaml  main.go  server.go
src/go/store-service/config/: BUILD.bazel  config.go
src/go/store-service/delivery/: BUILD.bazel  grpc.go
src/go/store-service/repository/: BUILD.bazel  postgres.go
src/go/store-service/service/: BUILD.bazel  service.go
src/go/store-service/store/: BUILD.bazel  store.go
src/go/store-service/templates/: config.yaml  deployment.yaml  service.yaml
src/go/store-service/usecase/: BUILD.bazel  usecase.go
src/go/user-service/: BUILD.bazel  Chart.yaml  main.go
src/go/user-service/config/: BUILD.bazel  config.go
src/go/user-service/delivery/: BUILD.bazel  grpc.go
src/go/user-service/jwt/: BUILD.bazel
src/go/user-service/repository/: BUILD.bazel  postgres.go
src/go/user-service/service/: BUILD.bazel  service.go
src/go/user-service/templates/: config.yaml  deployment.yaml  service.yaml
src/go/user-service/usecase/: BUILD.bazel  usecase.go
src/go/user-service/user/: BUILD.bazel  user.go
src/jvm/gateway-service/: BUILD
src/jvm/gateway-service/app/ryss/gateway/: BUILD  Launcher.kt
src/jvm/gateway-service/app/ryss/gateway/core/: GatewayService.kt
src/jvm/gateway-service/app/ryss/gateway/entites/: RequestError.kt
src/jvm/gateway-service/app/ryss/gateway/gql/: DSL.kt  DataFetchers.kt  GQLLocation.kt  GQLStore.kt  GQLUser.kt  GraphQL.kt
src/jvm/gateway-service/app/ryss/gateway/ratelimits/: MemoryRateLimiter.kt  RateLimiter.kt
src/jvm/gateway-service/app/ryss/gateway/util/: HashUtil.kt
tools/: jvm_dependencies.bzl
