load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_push",
)

gazelle(
    name = "gazelle",
    prefix = "github.com/ryssapp/backend",
)

go_image(
    name = "store-service",
    binary = "//src/go/store-service:store-service",
)

container_push(
    name = "store-service-push",
    image = ":store-service",
    format = "Docker",
    registry = "docker.io",
    repository = "ryss/store-service",
    tag = "latest",
)

go_image(
    name = "user-service",
    binary = "//src/go/user-service:user-service",
)

container_push(
    name = "user-service-push",
    image = ":user-service",
    format = "Docker",
    registry = "docker.io",
    repository = "ryss/user-service",
    tag = "latest",
)

go_image(
    name = "gateway-service",
    binary = "//src/go/gateway-service:gateway-service",
)

container_push(
    name = "gateway-service-push",
    image = ":gateway-service",
    format = "Docker",
    registry = "docker.io",
    repository = "ryss/gateway-service",
    tag = "latest",
)

go_image(
    name = "product-service",
    binary = "//src/go/product-service:product-service",
)

container_push(
    name = "product-service-push",
    image = ":product-service",
    format = "Docker",
    registry = "docker.io",
    repository = "ryss/product-service",
    tag = "latest",
)
