load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pb_proto",
    srcs = [
        "user.proto",
        "user_service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:root_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "pb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/ryssapp/backend/proto",
    proto = ":pb_proto",
    visibility = ["//visibility:public"],
    deps = ["//:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":pb_go_proto"],
    importpath = "github.com/ryssapp/backend/proto",
    visibility = ["//visibility:public"],
)
