load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ryssapp/backend/src/go/gateway-service",
    visibility = ["//visibility:private"],
    deps = [
        "//src/go/common/env:go_default_library",
        "//src/go/common/log:go_default_library",
        "//src/go/gateway-service/service:go_default_library",
    ],
)

go_binary(
    name = "gateway-service",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
