load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "github.com/ryssapp/backend/src/go/store-service",
    visibility = ["//visibility:private"],
    deps = ["//src/go/common/pb:go_default_library"],
)

go_binary(
    name = "store-service",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
