load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ryssapp/backend/src/go/user-service",
    visibility = ["//visibility:private"],
    deps = [
        "//src/go/common/pb:go_default_library",
        "//vendor/github.com/google/uuid:go_default_library",
        "//vendor/golang.org/x/crypto/bcrypt:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
    ],
)

go_binary(
    name = "user-service",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
