load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["env.go"],
    importpath = "github.com/ryssapp/backend/src/go/common/env",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/joho/godotenv:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
