load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "location.pb.go",
        "pagination.pb.go",
        "product.pb.go",
        "product_service.pb.go",
        "session_service.pb.go",
        "store.pb.go",
        "store_product.pb.go",
        "store_product_service.pb.go",
        "store_service.pb.go",
        "user.pb.go",
        "user_service.pb.go",
    ],
    importpath = "github.com/ryssapp/backend/src/go/common/pb",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/google.golang.org/grpc/codes:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
