load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/ryssapp/backend/src/go/gateway-service/service",
    visibility = ["//visibility:public"],
    deps = [
        "//src/go/common/pb:go_default_library",
        "//src/go/gateway-service/config:go_default_library",
        "//src/go/gateway-service/delivery:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
