load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/ryssapp/backend/src/go/product-service/service",
    visibility = ["//visibility:public"],
    deps = [
        "//src/go/common/pb:go_default_library",
        "//src/go/common/types:go_default_library",
        "//src/go/product-service/config:go_default_library",
        "//src/go/product-service/delivery:go_default_library",
        "//src/go/product-service/repository:go_default_library",
        "//src/go/product-service/usecase:go_default_library",
        "//vendor/github.com/go-pg/pg/v9:go_default_library",
        "//vendor/github.com/go-pg/pg/v9/orm:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
