load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["grpc.go"],
    importpath = "github.com/ryssapp/backend/src/go/session-service/delivery",
    visibility = ["//visibility:public"],
    deps = [
        "//src/go/common/pb:go_default_library",
        "//src/go/session-service/session:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
