load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["session.go"],
    importpath = "github.com/ryssapp/backend/src/go/session-service/session",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_redis_redis_v7//:go_default_library"],
)
