load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["store_product.go"],
    importpath = "github.com/ryssapp/backend/src/go/store-product-service/store_product",
    visibility = ["//visibility:public"],
    deps = ["//src/go/common/types:go_default_library"],
)
