load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["usecase.go"],
    importpath = "github.com/ryssapp/backend/src/go/store-service/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//src/go/store-service/store:go_default_library",
        "//vendor/google.golang.org/grpc/codes:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
    ],
)
