load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["postgres.go"],
    importpath = "github.com/ryssapp/backend/src/go/user-service/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//src/go/common/pb:go_default_library",
        "//src/go/common/types:go_default_library",
        "//vendor/github.com/go-pg/pg/v9:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
