load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/ryssapp/backend/src/go/user-service/service",
    visibility = ["//visibility:public"],
    deps = [
        "//src/go/common/pb:go_default_library",
        "//src/go/user-service/config:go_default_library",
        "//src/go/user-service/delivery:go_default_library",
        "//src/go/user-service/repository:go_default_library",
        "//src/go/user-service/usecase:go_default_library",
        "//src/go/user-service/user:go_default_library",
        "//vendor/github.com/go-pg/pg/v9:go_default_library",
        "//vendor/github.com/go-pg/pg/v9/orm:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
